# SIK-2-BombingRobots

./: .gitignore  CMakeLists.txt  README.md
client/: CMakeLists.txt  build.sh  main.cpp
client/client-data/: client-data.cpp  client_data.h
client/client-parameters/: client_parameters.cpp  client_parameters.h
client/messages/: messages.cpp  messages.h
client/net/: net.cpp  net.h
client/src/: err.h  main.cpp  types.h
client/src/client-data/: client-data.cpp  client_data.h  types.h
client/src/client-parameters/: client_parameters.cpp  client_parameters.h
client/src/messages/: messages.cpp  messages.h
client/src/net/: net.cpp  net.h
common/: err.h  types.h
server/: CMakeLists.txt
server/messages/: messages.cpp  messages.h
server/net/: net.h
server/server-data/: server_data.h
server/server-parameters/: server_parameters.cpp  server_parameters.h
server/src/: main.cpp
server/src/messages/: messages.cpp  messages.h
server/src/net/: net.cpp  net.h
server/src/server-data/: server_data.cpp  server_data.h  types.h
server/src/server-engine/: server_engine.cpp  server_engine.h
server/src/server-parameters/: server_parameters.cpp  server_parameters.h
